--- a/publish/src/main/res/layout/gridview_layout.xml
+++ b/publish/src/main/res/layout/gridview_layout.xml
@@ -3,23 +3,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/classify_img"
+        android:layout_gravity="center"/>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="选择发布类型"
-        android:textColor="#FFFFFF"
-        android:textSize="30dp"
-        android:gravity="center"
-        android:background="@mipmap/btn_large_green"
-        />
-
-    <GridView
-        android:id="@+id/grid_view"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:numColumns="4"
-        >
-    </GridView>
-
+        android:id="@+id/classify_text"
+        android:textSize="20dp"
+        android:gravity="center"/>
 </LinearLayout>
