--- a/publish/src/main/res/layout/listview_layout.xml
+++ b/publish/src/main/res/layout/listview_layout.xml
@@ -3,23 +3,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-    <TextView
+    <ListView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="选择发布类型"
-        android:textColor="#FFFFFF"
-        android:textSize="30dp"
-        android:gravity="center"
-        android:background="@mipmap/btn_large_green"
-        />
-
-    <GridView
-        android:id="@+id/grid_view"
+        android:id="@+id/publish_listview"
+        android:layout_weight="1">
+    </ListView>
+    <ImageView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:numColumns="4"
-        >
-    </GridView>
-
+        android:src="@mipmap/error"/>
 </LinearLayout>
