--- a/my/src/main/res/layout/my_homepage_layout.xml
+++ b/my/src/main/res/layout/my_homepage_layout.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#159357">
+    android:orientation="vertical"
+    android:background="#e8e8e8">
 
 </LinearLayout>
