--- a/my/src/main/res/layout/my_personal_head_layout.xml
+++ b/my/src/main/res/layout/my_personal_head_layout.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/user_intent_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#123456">
+    android:layout_height="85dp"
+    android:background="#51C477"
+    android:orientation="horizontal">
+
 
 </LinearLayout>
+
